Ttime!2019夏号英語版：リンク追加

--- a/_posts/2019-12-20-ttime2019summer.md
+++ b/_posts/2019-12-20-ttime2019summer.md
@@ -18,7 +18,7 @@ Hello! We are the student organization “Ttime!”, the publicity assistant of 
 
 英語版冊子は、工学部8号館・11号館などのほか、東大工学系の海外拠点にも設置しています。
 
-また、[こちら](https://www.t.u-tokyo.ac.jp/shared/link/data/setcmm_201706051649269166998829_948331.pdf)からもご覧いただけます。（日本語版はこちら）
+また、[こちら](https://www.t.u-tokyo.ac.jp/shared/link/data/setcmm_201706051649269166998829_948331.pdf)からもご覧いただけます。（日本語版は[こちら](http://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_048805.pdf)）
 
 留学生や海外の学生など、より多くの人にTtime!を読んでいただけると嬉しいです！
 
