--- a/_posts/articles/2020-11-30-ttime2020winter.md
+++ b/_posts/articles/2020-11-30-ttime2020winter.md
@@ -13,14 +13,14 @@ img: "2020/11/ttime2020winter_thumbnail.png"
 Ttime!編集員の渡邉です．
 
 
-先日Ttime!の冬号[「越境する工学」](https://drive.google.com/file/d/1EyQ3T0Cq2ll149JXg_C3pDv8McaCDeo3/view?usp=sharing)が完成しました！
+先日Ttime!の冬号[「越境する工学」](http://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_240206.pdf)が完成しました！
 
 
 「越境する工学」ということで，工学部の学科を超えたつながりに注目した記事となっています！
 
-気になる記事の内容はぜひこちらから！
-
-[https://drive.google.com/file/d/1EyQ3T0Cq2ll149JXg_C3pDv8McaCDeo3/view?usp=sharing](https://drive.google.com/file/d/1EyQ3T0Cq2ll149JXg_C3pDv8McaCDeo3/view?usp=sharing)
+気になる記事の内容はぜひこちら
+[こちら](http://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_240206.pdf)
+から！
 
 
 ![Image](/assets/images/2020/11/ttime2020winter.png)
