--- a/_posts/articles/2020-11-30-ttime2020winter.md
+++ b/_posts/articles/2020-11-30-ttime2020winter.md
@@ -10,18 +10,28 @@ img: "2020/11/ttime2020winter_thumbnail.png"
 
 
 こんにちは！
-Ttime!編集員の渡邉です．
+Ttime!編集長を務めています、機械工学専攻・修士1年の竹下です。
+
+先日、「越境する工学」と「特集：UTokyo Project Sprint」を掲載したTtime!2020冬号が完成しました。
+[こちら](http://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_240206.pdf)からご覧いただけます！
 
 
-先日Ttime!の冬号[「越境する工学」](http://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_240206.pdf)が完成しました！
+[![Image](/assets/images/2020/11/ttime2020winter.png)](http://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_240206.pdf)
 
 
-「越境する工学」ということで，工学部の学科を超えたつながりに注目した記事となっています！
-
-気になる記事の内容はぜひこちら
-[こちら](http://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_240206.pdf)
-から！
+Ttime!の冊子は、東京大学キャンパス内にて配布のほか、郵送でも手に入れることができます。
+お問い合わせは、[kouhou@pr.t.u-tokyo.ac.jp](kouhou@pr.t.u-tokyo.ac.jp)（東京大学工学部広報室）まで。
 
 
-![Image](/assets/images/2020/11/ttime2020winter.png)
+「越境する工学」では、全16学科のマップに始まり、学科横断での研究紹介、学科比較インタビュー、学部横断インタビューと盛りだくさんで、工学部の学科間の関係性について理解を深めてもらえる内容になっています！
+進学先に悩む皆さんの参考になれば嬉しいです。
 
+
+さらには、「UTokyo Project Sprint」の特集も掲載しています！
+これはコロナ禍の中、学生主導で行われたWebサービス開発を中心としたプロジェクトで、運営メンバーとプロジェクト参加者へのインタビューを行いました。
+今回の特集に当たり、プロジェクト内で実際に使われた講座資料を特別に公開していただきました。冊子内に情報が掲載されていますので、ぜひチェックしてみてください。
+
+
+イレギュラーな1年でしたが、今年度の冊子作成を無事終えることができて、ほっとしています。
+次号からは新編集長にバトンタッチになりますが、ますます充実した内容の冊子をお届けできるようメンバーみんなで頑張っていきます。
+これからも冊子、WebともどもTtime!をよろしくお願いします！
