--- a/_posts/articles/2020-11-30-ttime2020winter.md
+++ b/_posts/articles/2020-11-30-ttime2020winter.md
@@ -13,10 +13,10 @@ img: "2020/11/ttime2020winter_thumbnail.png"
 Ttime!編集長を務めています、機械工学専攻・修士1年の竹下です。
 
 先日、「越境する工学」と「特集：UTokyo Project Sprint」を掲載したTtime!2020冬号が完成しました。
-[こちら](http://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_240206.pdf)からご覧いただけます！
+[こちら](https://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_558043.pdf)からご覧いただけます！
 
 
-[![Image](/assets/images/2020/11/ttime2020winter.png)](http://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_240206.pdf)
+[![Image](/assets/images/2020/11/ttime2020winter.png)](https://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_558043.pdf)
 
 
 Ttime!の冊子は、東京大学キャンパス内にて配布のほか、郵送でも手に入れることができます。
