add link to articles

--- a/_posts/articles/2021-07-07-ttime2021summer.md
+++ b/_posts/articles/2021-07-07-ttime2021summer.md
@@ -10,9 +10,9 @@ img: "2021/07/ttime2021summer_thumbnail.png"
 
 こんにちは！Ttime! 編集長の髙田です！
 
-Ttime!2021夏号「工学部の授業」が完成しました！
+[Ttime!2021夏号「工学部の授業」](https://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_600456.pdf)が完成しました！
 
-![Image](/assets/images/2021/07/ttime2021summer.png)
+[![Image](/assets/images/2021/07/ttime2021summer.png)](https://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_600456.pdf)
 
 
 今回は、東京大学工学部の各学科で行われている様々な授業に注目しました。先生が教壇に立ち授業を行う形式のみではなく、学生が自主的に考えて手を動かすような演習形式の授業やさらに実践的な活動を行う創造的ものづくりプロジェクトを取り上げました！
