fix link and content

--- a/_posts/articles/2021-12-27-ttime2021winter.md
+++ b/_posts/articles/2021-12-27-ttime2021winter.md
@@ -8,22 +8,23 @@ categories:
 img: "2021/12/ttime2021winter_thumbnail.jpg"
 ---
 
-こんにちは！Ttime!Web編集長の渡邉です。
+こんにちは! Ttime! 編集長の髙田です!
 
 [Ttime!2021冬号「工学の生まれる場所 」](https://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_661949.pdf)が完成しました！
 
 
 [![Image](/assets/images/2021/11/ttime2021winter.jpg)](https://www.t.u-tokyo.ac.jp/shared/public_relations/data/setcmm_20160725181747287435428723_661949.pdf)
 
-今回は、東京大学のキャンパス及び工学部の建物に注目した特集になっています。
+今回の冬号では、東京大学の各キャンパスに注目し、それぞれのキャンパスの紹介と共にそのキャンパスで研究、活躍なされている工学部の先生方の研究についても取り上げました。
+またそれぞれの先生方からキャンパス内のおすすめスポットも紹介しています!
+何年もキャンパスで研究していらっしゃる工学部の先生方ならではの視点のオススメスポットばかりです。
 
-数ある東京大学のキャンパスの中から主に工学部の研究が行われている本郷、駒場、柏のキャンパスを紹介しています。
-
-また、"狂おしいほどの衝動で未来を創る"をコンセプトに、工学で活躍する人を紹介する「狂ATE（CREATE） the FUTURE」とういう動画コンテンツを紹介しています
-
-
-
-冊子はweb上での公開の他、郵送もしております。お問い合わせは、[kouhouあっとpr.t.u-tokyo.ac.jp]()（東京大学工学部広報室）（あっとを@に変換）まで。
+加えて、本号では “狂おしいほどの衝動で未来を創る” をコンセプトに、工学部で活躍する人を紹介する「狂ATE (CREATE) the FUTURE」という動画コンテンツも特集してます。さらに冊子内で掲載しきれなかった内容についてWeb記事で紹介しています。[こちら](/2021/12/12/ttime2021winter_createF.html)からご覧ください!!
 
 
-次号のTtime!もぜひお楽しみに！
+
+冊子につきましてはWeb上での公開の他、郵送もしております。
+お問い合わせは、[kouhouあっとpr.t.u-tokyo.ac.jp]()（東京大学工学部広報室）（あっとを@に変換）まで。
+
+2022夏号では、新しいメンバーと共により高いレベルの冊子作りに取り組みます!!!
+次回2022夏号の完成もお楽しみに!
