--- a/_posts/articles/2021-12-27-ttime2021winter.md
+++ b/_posts/articles/2021-12-27-ttime2021winter.md
@@ -19,7 +19,7 @@ img: "2021/12/ttime2021winter_thumbnail.jpg"
 またそれぞれの先生方からキャンパス内のおすすめスポットも紹介しています!
 何年もキャンパスで研究していらっしゃる工学部の先生方ならではの視点のオススメスポットばかりです。
 
-加えて、本号では “狂おしいほどの衝動で未来を創る” をコンセプトに、工学部で活躍する人を紹介する「狂ATE (CREATE) the FUTURE」という動画コンテンツも特集してます。さらに冊子内で掲載しきれなかった内容についてWeb記事で紹介しています。[こちら](/2021/12/12/ttime2021winter_createF.html)からご覧ください!!
+加えて、本号では “狂おしいほどの衝動で未来を創る” をコンセプトに、工学部で活躍する人を紹介する「狂ATE (CREATE) the FUTURE」という動画コンテンツも特集しています。さらに冊子内で掲載しきれなかった内容についてWeb記事で紹介しています。[こちら](/2021/12/12/ttime2021winter_createF.html)からご覧ください!!
 
 
 
