add seimitsu 01 and fix 02 format

--- a/_posts/articles/2022-03-18-seimitsu02.md
+++ b/_posts/articles/2022-03-18-seimitsu02.md
@@ -54,6 +54,6 @@ img: "2022/03/seimitsu02_thumbnail.jpg"
 ![profk02](/assets/images/2022/03/seimitsu02_profk02.jpg)
 
 
-前半はこちらから：[精密工学科の先生にインタビュー　【前編】医学と工学の横断領域「医工学」とは](/2022/03/17/seimitsu01.html)
+前半はこちらから：[精密工学科の先生にインタビュー（前編）医学と工学の横断領域「医工学」とは](/2022/03/17/seimitsu01.html)
 
 
