--- a/_posts/articles/2022-03-18-seimitsu02.md
+++ b/_posts/articles/2022-03-18-seimitsu02.md
@@ -9,7 +9,7 @@ img: "2022/03/seimitsu02_thumbnail.jpg"
 ---
 
 こんにちは、工学部精密工学科に内定している2年の佐々木です。
-前半では小林先生の研究内容について紹介しました。
+前半では[小林先生の研究内容](/2022/03/18/seimitsu01.html)について紹介しました。
 後半は小林先生が学生時代にどのようにして進路を選択したのかをご紹介します。
 
 
@@ -54,6 +54,6 @@ img: "2022/03/seimitsu02_thumbnail.jpg"
 ![profk02](/assets/images/2022/03/seimitsu02_profk02.jpg)
 
 
-前半はこちらから：[精密工学科の先生にインタビュー（前編）医学と工学の横断領域「医工学」とは](/2022/03/17/seimitsu01.html)
+前半はこちらから：[精密工学科の先生にインタビュー（前編）医学と工学の横断領域「医工学」とは](/2022/03/18/seimitsu01.html)
 
 
