--- a/_posts/articles/2022-03-18-kashisu.md
+++ b/_posts/articles/2022-03-18-kashisu.md
@@ -10,7 +10,7 @@ img: "2022/03/kashisu_thumbnail.jpg"
 
 こんにちは！ 化学システム工学科に内定している、理科二類2年の佐久間です。
 
-今回は、化学システム工学科の杉山弘和先生に、研究や進路選択についてお話をうかがいました。
+今回は、化学システム工学科の杉山弘和先生に、研究や進路選択についてお話を伺いました。
 杉山先生は、東京大学理科二類から化学システム工学科に進学された後、大学院時代にスイスへ留学してそのまま現地就職し、その後東大の研究室に戻って現在も研究を続けていらっしゃいます。
 
 ![(インタビューに答えてくだった杉山先生)](/assets/images/2022/03/kashisu_interview.jpg);
@@ -26,7 +26,7 @@ img: "2022/03/kashisu_thumbnail.jpg"
 （注1）分離・精製：化学工業で、物質の性質の違いを利用して目的化学物質を分離する操作。
 
 
-# 化学システム工学科に進学した理由は何ですか？
+# 化学システム工学科に進学した理由を教えてください
 **杉山先生**：前期課程で熱力学に夢中になり、その中でも、カルノーサイクルによって熱機関の最大熱効率の理論値が求められることに感銘を受けました。
 そして、社会に対して理論値を出すことができるような学問がしたいと思うようになり、化学システム工学科に進学しました。
 進学後は、様々なものを組み合わせて最適化を図るプロセスシステム工学に興味を持ちました。
@@ -36,13 +36,13 @@ img: "2022/03/kashisu_thumbnail.jpg"
 （注2）ライフサイクルアセスメント：製品が原料から生産され、使用・廃棄されるまでの全ての段階を考慮して、環境への影響を評価する手法。
 
 
-# スイスへ滞在しようと思ったきっかけは何ですか？
+# スイスを選ばれたのはなぜですか？
 **杉山先生**：当時、東大を含めた3か国の大学合同で、サスティナビリティ（注3）に関する教育活動を盛り上げる取り組みがあり、その一環で4年生の終わりにスイスの大学での研究交流に参加しました。
 そこでの環境に憧れ、修士過程のあいだに短期滞在していましたが、博士過程から正規に入学し、化学プロセス設計の研究を続けました。
 博士号取得後は、せっかくなので現地就職しようと考え、スイスの製薬会社に入りました。
 
 
-（注3）サステナビリティ：「持続可能性」の意味で、主に社会と地球環境を良い状態に保ち続けるという意味で使われる。
+（注3）サステナビリティ：「持続可能性」。主に社会と地球環境を良い状態に保ち続けるという意味で使われる。
 
 
 ![(平尾先生、チューリッヒ工科大学のKonrad先生、杉山先生)](/assets/images/2022/03/kashisu_profhks.jpg)
@@ -57,7 +57,7 @@ img: "2022/03/kashisu_thumbnail.jpg"
 ![(製薬会社のScmidtさんと杉山先生)](/assets/images/2022/03/kashisu_profsmrs.jpg)
 
 
-# 研究室へ戻ることを決断したきっかけは何ですか？
+# 研究室へ戻ることを決断したきっかけは？
 **杉山先生**：薬の製造プロセスが、理論的に考えられていない現状に疑問を抱いたことがきっかけです。
 医薬品製造はスピードが命なので、プロセスの最適化が二の次にされてしまうことは理解できますが、本当にそれで良いのかという思いが日に日に強まりました。
 プロセス設計に問題があることは実際に現場で働いてみて気づいたことであり、そういった意味でも企業での経験は大きいと思います。
@@ -67,6 +67,3 @@ img: "2022/03/kashisu_thumbnail.jpg"
 戸惑うこともあるでしょうが、専門的な勉強に入っていくにあたって最終的には自分が好きなものを決めなければなりません。
 決め手は色々あると思いますが、多くの場合きっかけになるのは授業ではないでしょうか。
 前期課程のうちにピンとくる授業と出会うことができれば、その分野に進んで後悔しないはずです。
-
-いかがでしたか？ この記事が、化学系の学科の研究内容に興味を持っている方や、現在進路に悩んでいる方の参考になれば幸いです。
-
