--- a/_posts/articles/2022-03-18-mateko.md
+++ b/_posts/articles/2022-03-18-mateko.md
@@ -8,26 +8,22 @@ categories:
 ---
 
 こんにちは。
-この秋からマテリアル工学科に内定した学部２年の安心院悠と申します。
+この秋からマテリアル工学科に内定した学部２年の安心院悠です。
 
-今回は、私が内定したマテリアル工学科の授業の一つであるマテリアル工学科が研究している内容とマテリアル工学科の授業の一つである『自由研究』についてご紹介します。
+今回は、私が内定したマテリアル工学科が研究している内容とマテリアル工学科の授業の一つである『自由研究』についてご紹介します。
 
 
 # マテリアル工学科とは？
-最初にマテリアル工学科がどのような研究をしているかをご紹介します。
-マテ工という学科があることは進学選択ガイダンスなどで聞いたことはあるけれど、実際にどのような研究が行われているかはあまり知らないという方が多いと思います。
-
 マテリアルとは日本語にすると素材、材料という意味ですが、マテリアル工学科が研究している対象は、橋や資材に使う鉄鋼材料などのハードの素材、ナノ電気デバイスに用いられる半導体、生体中で役立つ高分子素材など様々です。
 私は医療と工学の連携に興味を持ち、血液や尿に含まれるマイクロRNAを自動的に採取し診断するものといった生体デバイスの研究を行ってみたいと思いこの学科を選びました。
-一方で他にも多様な志望動機を持った学生が集まっています。
+他にも多様な志望動機を持った学生が集まっています。
 
 # 自由研究
 自由研究の授業では多様な研究分野を持つ先生のもとにそれぞれ3人ほどの班になってわかれ、自分たちで選択したテーマについて議論したり仮説を立てたりして研究をします。
 とは言っても全くバラバラな研究を行うわけではなく、毎年全体でひとつの大テーマがあります。
-近年の例では、2年前は「オリンピック」、昨年は「パンデミック」、今年は「SDGs」がテーマとなり、それに沿った内容の研究をそれぞれの班で行います。
+近年の例では、2年前は「オリンピック」、昨年は「パンデミック」、今年は「SDGs」がテーマに選ばれました。
 今年は例えばSDGsの一環である気候変動の対策として軽量素材の飛行機の開発や、ウェアラブルデバイスによる健康の管理などを行っています。
 私の班では、カーボンニュートラルを実現するために人工光合成を高効率で行うための新たなポリマーマテリアルを題材に発表を行いました。
-研究という名を冠していますが授業内で扱う内容は文献調査をし仮定を立てるまでの部分です。
-それでも、学科で扱う内容の入門としては十分な経験がつけられると思います。
-また、この講義では他のグループの発表を聞くことでマテリアル工学の持つ幅広さを実感でき、3年生以降の履修計画や卒業研究などにも生かすことができる上で非常に有益であると感じました。
+研究という名を冠していますが授業内で扱う内容は文献調査をし仮定を立てるまでですが、学科で扱う内容の入門として十分な経験が得られると思います。
+また、この講義では他のグループの発表を聞くことでマテリアル工学の持つ幅広さを実感でき、3年生以降の履修計画や卒業研究などにも生かすことができる側面もあります。
 マテリアル工学科に興味を持っている方に、このような授業をするという一面を知っていただければ幸いです。
