--- a/_posts/articles/2022-03-18-seimitsu01.md
+++ b/_posts/articles/2022-03-18-seimitsu01.md
@@ -10,8 +10,8 @@ img: "2022/03/seimitsu01_thumbnail.jpg"
 
 こんにちは、工学部機械工学科3年の柴田です。
 今回は、東京大学工学部精密工学科で医療応用のための精密工学を専門とされている小林英津子先生に、
-1. ご自身の研究内容（前編）
-2. ご自身の進路選択の過程（後編）
+1. 先生の研究内容（前編）
+2. 先生の進路選択の過程（後編）
 
 
 についてお話を伺いました。
@@ -62,7 +62,7 @@ img: "2022/03/seimitsu01_thumbnail.jpg"
 
 
 小林先生に、研究されている「医工学」について伺いました。
-学生時代から教授になられた現在までのお話に続きます！ぜひ読んでみてください。
+学生時代から教授になられた現在までのお話に続きます！
 
 
 後編はこちらから：[精密工学科の先生にインタビュー（後編）](/2022/03/18/seimitsu02.html)
