--- a/_posts/articles/2022-03-18-seimitsu02.md
+++ b/_posts/articles/2022-03-18-seimitsu02.md
@@ -13,7 +13,7 @@ img: "2022/03/seimitsu02_thumbnail.jpg"
 後半は小林先生が学生時代にどのようにして進路を選択したのかをご紹介します。
 
 
-# 学部時代から現在までのご経歴は？
+# 学部時代から現在までの経歴は？
 
 小林先生：東京大学の理科一類に入学し、工学部の精密機械工学科（現精密工学科）に進学しました。
 その後は工学系研究科の精密工学専攻の修士過程、さらには博士過程を経て研究の道に進みました。
@@ -36,7 +36,7 @@ img: "2022/03/seimitsu02_thumbnail.jpg"
 
 
 
-# 今まで出会った中で印象的だった先生はいらっしゃいますか？
+# 今まで出会った中で印象的だった先生は？
 
 小林先生：学部時代からの指導教員です。
 その先生は医師でしたが、ものづくりが大好きで、自分のデスクにネジが転がっているような先生でした。
