サムネイル夏号-tyousei

--- a/_posts/articles/2022-08-03-ttime2022summer.md
+++ b/_posts/articles/2022-08-03-ttime2022summer.md
@@ -5,12 +5,12 @@ title: Ttime!2022夏号が完成しました！
 date: "2022-08-06T01:54:38.510Z"
 categories:
   - brochure
-img: "2022/08/ttime2022summer_thumbnail.jpg"
+img: "2022/08/ttime2022summer_thumbnail.png"
 ---
 
 こんにちは、Ttime!今年度の冊子編集長の升野です。
-[Ttime!2022年夏号「工学を見据える」](https://drive.google.com/file/d/12c8WPuzh5bibCyno0Kk8r1sFgqBX_7_O/view)が完成しました。
-[![Image](/assets/images/2022/08/ttime2022summer.png)](https://drive.google.com/file/d/12c8WPuzh5bibCyno0Kk8r1sFgqBX_7_O/view)
+[Ttime!2022年夏号「工学を見据える」](https://20511701.fs1.hubspotusercontent-na1.net/hubfs/20511701/pdf/2022Ttime.pdf)が完成しました。
+[![Image](/assets/images/2022/08/ttime2022summer.png)](https://20511701.fs1.hubspotusercontent-na1.net/hubfs/20511701/pdf/2022Ttime.pdf)
 
 
 
