--- a/_posts/articles/2022-08-03-gakusai.md
+++ b/_posts/articles/2022-08-03-gakusai.md
@@ -21,7 +21,7 @@ categories:
 
 # 学際情報学府ってどんなところ？
 「学際的」という言葉をご存じでしょうか？　英語にすると”interdisciplinary”で、よく「分野横断的」と表現されます。これだけを聞くと「何の分野を横断しているの？」となってしまいそうですが、どの分野を横断しているかは研究室ごと、もっと言えば学生ごとに違うと思います。ホームページにあるように、「情報」を軸として人文社会系（文系）も理工系（理系）も関係なく、多彩な学問を探求できる環境になっています。「学際的」を「文理融合」と読み替えたら少し分かりやすくなるかもしれません。
-学際情報学府には6つのコースがあり、便宜上は文系・理系に分かれていますが、どのコースに所属していても選択できる授業が大半です（必修科目が若干異なる程度）。私も修士一年の時、数値シミュレーションの基礎を学ぶ授業と1冊の古典をじっくり読むメディア論の授業を同時期に取っていました。「情報」という共通軸はありつつも、このような履修の仕方は他の研究科ではあまりできないのではないでしょうか？（437）
+学際情報学府には6つのコースがあり、便宜上は文系・理系に分かれていますが、どのコースに所属していても選択できる授業が大半です（必修科目が若干異なる程度）。私も修士一年の時、数値シミュレーションの基礎を学ぶ授業と1冊の古典をじっくり読むメディア論の授業を同時期に取っていました。「情報」という共通軸はありつつも、このような履修の仕方は他の研究科ではあまりできないのではないでしょうか？
 
 # 工学部とのつながりは？
 Ttime! やTtime! Webでは工学部の魅力を発信しているので、工学部と学際情報学府のつながりが気になる方もいると思います。工学系の学生が比較的多いのは、先端表現情報学コースと総合分析情報学コースです。この2つのコースに所属している研究室は、東大の他の研究科（主に工学系研究科や情報理工学系研究科）にも同時に所属している場合が多いという事情が関係していると思います。その中でも学際情報学府に進学する学生は、「技術が社会でどのように活かされているのか」研究と社会との接点に関心がある人が多い印象です。自分の研究と社会との関係を考えてみたい方は、進路選択の候補として考えてみませんか？
