--- a/_posts/articles/2022-08-03-ttime2022summer.md
+++ b/_posts/articles/2022-08-03-ttime2022summer.md
@@ -9,12 +9,12 @@ img: "2022/08/ttime2022summer_thumbnail.png"
 ---
 
 こんにちは、Ttime!今年度の冊子編集長の升野です。
-[Ttime!2022年夏号「工学を見据える」](https://20511701.fs1.hubspotusercontent-na1.net/hubfs/20511701/pdf/2022Ttime.pdf)が完成しました。
+[Ttime!2022年夏号「工学を見据える」](https://www.t.u-tokyo.ac.jp/foe/public-relations/t-time)が完成しました。
 
 <br>
 <br>
 
-[![Image](/assets/images/2022/08/ttime2022summer.png)](https://20511701.fs1.hubspotusercontent-na1.net/hubfs/20511701/pdf/2022Ttime.pdf)
+[![Image](/assets/images/2022/08/ttime2022summer.png)](https://www.t.u-tokyo.ac.jp/foe/public-relations/t-time)
 
 <br>
 <br>
