8/25広報室修正

--- a/_posts/articles/2022-08-03-gakusai.md
+++ b/_posts/articles/2022-08-03-gakusai.md
@@ -30,7 +30,7 @@ Ttime! やTtime! Webでは工学部の魅力を発信しているので、工学
 # 最後に
 本記事では大学院の紹介をしました。学際情報学府では研究以外にも自分の個性を発揮できる機会が多くあります。気になった方は、ぜひ進路の候補に加えてみてください。
 
-学際情報学府ホームページ：(https://www.iii.u-tokyo.ac.jp/)
+[学際情報学府ホームページ](https://www.iii.u-tokyo.ac.jp/)
 
 
 
