10/1広報室修正

--- a/_posts/articles/2022-08-03-ttime2022summer.md
+++ b/_posts/articles/2022-08-03-ttime2022summer.md
@@ -25,11 +25,11 @@ img: "2022/08/ttime2022summer_thumbnail.png"
 　また、正門から入って左手側にある工学部広場付近のいくつかのオブジェの特集も掲載しています。これらのオブジェを見たことない人も、いつもなんとなく通り過ぎている人も、オブジェにまつわる歴史を楽しんでいただければと思います。
 
 　冊子はweb上での公開の他、郵送もしております。ご希望の方は、kouhouあっとpr.t.u-tokyo.ac.jp（東京大学工学部広報室）（あっとを@に変換）まで。お待ちしています。
-　2022夏号でも読者アンケートを実施しています。今後の冊子作成に活かすため、下のQRコードもしくはこちら(https://forms.gle/SKNuf9D7Cd8zT8PU7)からご回答していただけますと幸いです。
+　2022夏号でも読者アンケートを実施しています。今後の冊子作成に活かすため、下のQRコードもしくは [こちら](https://forms.gle/SKNuf9D7Cd8zT8PU7)からご回答していただけますと幸いです。
 
 <br>
 
-[! [Image](/assets/images/2022/08/ttime2022summer-qr.png)]
+![Image](/assets/images/2022/08/ttime2022summer-qr.png)
 
 
 
