--- a/_posts/articles/2023-06-25-eeic.md
+++ b/_posts/articles/2023-06-25-eeic.md
@@ -26,7 +26,7 @@ img: "2023/03/eeic_thumnail.jpg"
 
 <br>
 
-![電気が関わる幅広いスケール](/assets/images/2023/03/電気が関わる幅広いスケール.png)
+![放電発生装置](/assets/images/2023/03/電気が関わる幅広いスケール.png)
 
 
 <br>
