Resolve conflict and fix content

--- a/_posts/articles/2023-06-25-eeic.md
+++ b/_posts/articles/2023-06-25-eeic.md
@@ -12,29 +12,34 @@ categories:
 こんにちは。電子情報工学科3年の武田です。
 学科配属から、まだ1年未満の学科初心者ですが、実際に授業を受けてわかった電子情報工学科の魅力について紹介します！！！
 進学選択の参考になれば嬉しいです！
-<br>
+
 
 # 電子情報工学科って？
 電子情報工学科は電気電子工学科と合同の授業が多く、この2学科を合わせてEEIC、電気系学科と呼ばれることがあります。両学科が一緒に授業を受ける理由については、学科ホームページによると以下の記載があります。「『情報』を操るには『物理』が必要であり、『物理』に向き合えば『情報』の新しい使い方が見えてきます。つまり、「情報」（ソフト）を学ぶだけでなく、「物理」（ハード）も学ぶことができるのが電子情報工学科ということです。情報だけを学ぶのではなく、ソフトとハードの二刀流をしたい人にはおすすめの学科です。実際に、電気系学科が開講する授業には統計的機械学習やアルゴリズムといったソフトから、コンピュータアーキテクチャや半導体デバイス工学といったハードまで広い分野があり、ソフト、ハードの二刀流を目指すには持ってこいです！
-<br>
+
 
 # 具体的にはどのようなことを学ぶの？
 もう少し解像度を上げて電子情報工学科について紹介したいと思います。学科の特性を一番反映しているのが実験！ということで実験について紹介します。電子情報工学科では3S・3Aセメスターそれぞれの月、火、木の3、4限で前期実験、後期実験と呼ばれるものが存在します。実験は1人でやるものではなく、コンタクトグループといって電気電子工学科、電子情報工学科から2、3人ずつ選ばれて共同で行います。そのため、1人ではわからなくても協力して実験をすることで理解を深めることができます。前期実験でこれまでに扱ったテーマから、電気電子寄りの内容と電子情報よりの内容を1つずつ紹介します。
-<br>
-1. 気体エレクトロニクス
-<br>
+
+
+### 1. 気体エレクトロニクス
+
 この実験では核融合エネルギー開発などの様々な工学分野で応用されているプラズマの基礎の放電現象を学びます。高電界を原子にかけることで原子核と電子を分離させる、いわゆる放電現象を発生させ、その発生条件について考察します。
-<br>
+
+
 ![放電発生装置](/assets/images/2023/03/放電発生装置.JPG)
-<br>
+
+
 上の写真の装置で数kV〜数十kVの電界を変化させたり、高電位の電極と低電位の電極の間隔を変えたりして、放電の発生条件を変えます。実際に放電を実験室で発生させた後で、PC上でシミュレーションをして先ほどの実験内容がシミュレーション通りであったかの確認や考察をするまでがこの実験のカリキュラムです。放電が発生した瞬間を双眼鏡を使って捉えるのですが、それが非常に難しくて自分の目に自信が持てなくなってきます(笑)。
-<br>
-2. 情報
-<br>
+
+
+### 2. 情報
+
 この実験は合計12日間にも及び、インターネット電話や電話会議システムを作ることを目標にします。
 電話というと難しく聞こえますが、音を録音する・再生する・ 音データをネットワークで転送するというこの3つの内容を実装する実験です。これまでの授業で扱った、信号処理やC言語のプログラミングなどの自分の知識をフル活用して挑みます。
-<br>
+
+
 この実験は自分もまだ途中の段階なので詳しくはかけませんが、周波数を変化させて、ドレミファソラシドの音が目標通り出ただけでも嬉しいものです。
 
-<br>
+
 実験以外にも電子情報工学科には様々な面白い授業があるので、興味を持ってくれたら嬉しいです！
