--- a/_posts/articles/2023-07-04-keisu.md
+++ b/_posts/articles/2023-07-04-keisu.md
@@ -5,15 +5,12 @@ title: 計数工学科って何？授業はどんな感じ？1年間通ってみ
 date: "2023-07-04 T00:55:56.322Z"
 categories:
   - dept-intro
-
-
-
 ---
+
 こんにちは、工学部計数工学科3年の山本です。今回は、僕が通っている学科、計数工学科について紹介します。
 記事を書く前に、他学部の人に計数工学科のイメージを聞いたところ、「そもそも計数工学って何？」と言われてしまいました。
 全国的にもユニークな学科名でですが、実際には何を学んでいるのでしょうか？
 
-<br>
 
 # 計数工学とは？
 学科ホームページによると、計数工学科は、「計測×数理」に由来します。ホームページを抜粋すると以下の通りです。
@@ -24,12 +21,10 @@ categories:
 また、学部では3年次からコース振り分けによって、システム情報コースと数理情報コースに分かれます。
 システム情報コースでは「実世界を正しく認識し望みの機能を実現する」ことを目標とし、数理情報コースでは「現象の本質をモデル化し問題解決手法を創り出す」ことを目標とします。
 
-<br>
 
 # 計数工学科では何を学ぶのか？
 今回は数理コース開講の「数理工学」、システムコース開講の「認識行動システム」、そして「計数工学実験」の3つを紹介します。いずれも計数工学科の良さが感じられる授業だと思います。
 
-<br>
 
 # 代数、解析、確率数理工学、およびその演習
 計数工学科では「基礎を深く、視野を広く」をモットーとしているので、講義では基礎的な科目を重点的に学びます。
@@ -43,7 +38,6 @@ categories:
 
 ※1：3Sでは代数、解析、確率数理工学が、3Aでは算法、幾何数理工学が開講されます。また、2Aではそれらの基礎として「基礎数理」なる科目が開講されます。
 
-<br>
 
 # 認識行動システム基礎
 この授業では、「計数工学っぽいものを使って人が楽しめる製品のプロトタイプを作る」というコンセプトで、文献調査、開発、発表といった製品開発の一連のプロセスを体験するかなり実践的な授業でした。
@@ -51,23 +45,18 @@ Arduino、Unity、VR（研究室からの借り物）、その他自らで買っ
 
 最後の授業では、各グループで作った試作品をお互いに体験し合いました。どのグループも、授業の一環でこれだけクオリティの高い作品が作れるのか！と驚くほどのものを作っていました。
 
-<br>
 
 # 計数工学実験
 計数工学実験では、各研究室が用意したいくつかの実験のうち4つに割り当てられます。
 前述の通り計数工学科では幅広い分野に関連する研究がなされていますが、その基礎となる手法を4つ体験することができます。
 私は現時点で、
-<br>
-・現代制御理論を用いてシステムを設計し、倒立振子の挙動について考察する、倒立振子の制御の実験
-<br>
-・筋肉が収縮するときに発生する電位差を、肌に貼り付けた電極で測定しデータの解析を行う、生体信号の計測と解析の実験
-<br>
-・梁のたわみを、有限要素法を用いて数値的に解く、数値手法の演習
-<br>
+- 現代制御理論を用いてシステムを設計し、倒立振子の挙動について考察する、倒立振子の制御の実験
+- 筋肉が収縮するときに発生する電位差を、肌に貼り付けた電極で測定しデータの解析を行う、生体信号の計測と解析の実験
+- 梁のたわみを、有限要素法を用いて数値的に解く、数値手法の演習
+
 の3つの実験を行いました。
 様々な種類の実験をさせてもらえることがこれだけでもわかると思います。
 
-<br>
 
 # 終わりに
 この記事で計数工学科の授業について少しでも知っていただけたなら幸いです。ありがとうございました！
