Fix image filename

--- a/_posts/articles/2023-06-25-eeic.md
+++ b/_posts/articles/2023-06-25-eeic.md
@@ -38,4 +38,4 @@ categories:
 実験以外にも電子情報工学科には様々な面白い授業があるので、興味を持ってくれたら嬉しいです！
 
 
-![グループワークの様子](/assets/images/2023/03/グループワークの様子.JPG)
+![グループワークの様子](/assets/images/2023/03/group_work.jpg)
